# fastAPI

./: .gitignore  LICENSE  alembic.sh  myapp.sh  nohup.out  pyproject.toml  readme.md  setup.py
DEBIAN/: control  postinst  postrm
docs/: 签名.md  雪花算法 snowflake.md
lib/systemd/system/: myapp.service
myapp/: generate_i18n.py  main.py  openapi.py  worker.py
myapp/api/: desktop.py  item.py  jjtest.py  log.py  qa.py  system.py  token.py  user.py
myapp/base/: __init__.py  cache.py  code.py  constant.py  db.py  db_async.py  db_sync.py  exception.py  generate_i18n.py  lock.py  response.py  router.py  schema.py  tools.py  utils.py  validate.py  websocket.py
myapp/base/context/: __init__.py  ctx.py  errors.py
myapp/base/dependency/: db.py
myapp/code/: auth.py  desktop.py  log.py  system.py  user.py
myapp/conf/: config.py  loginit.py  settings.toml
myapp/conf/rsa/: private_key.pem  public_key.pem
myapp/db/migrations/: alembic.ini  env.py
myapp/db/migrations/versions/: 1317e6551cf7_init.py  694890d2fe42_add_qa.py  94e51c3736f9_jjtest_set_model_all_true.py  bc5f7d589ae8_init.py  de74e9918cd7_init.py
myapp/error_code/: desktop.py  jjtest.py  qa.py  user.py
myapp/exception/: auth.py  desktop.py  jjtest.py  qa.py  system.py  user.py
myapp/i18n/: en.py  zh.py
myapp/manager/: desktop.py  jjtest.py  log.py  qa.py  system.py  token.py  user.py
myapp/models/: __init__.py  desktop.py  jjtest.py  log.py  qa.py  user.py  userauth.py
myapp/schema/: common.py  desktop.py  jjtest.py  log.py  qa.py  system.py  token.py  user.py
myapp/test/: test_desktop.py  test_user.py
myapp/utils/: generate_i18n.py  request_id.py  snowflake.py
