[tool.poetry]
name = "myapp"
version = "0.1.0"
description = "python web framework base on FastAPI."
authors = ["xiaobin.zhao"]

[[tool.poetry.source]]
name = 'aliyun'
url = 'http://mirrors.aliyun.com/pypi/simple/'

[tool.poetry.dependencies]
python = "~3.7"
alembic = "~1.4.3"
SQLAlchemy = "~1.3.20"
pydantic = "~1.7.3"
uvicorn = "~0.13.0"
PyMySQL = "~0.10.1"
dynaconf = "~3.1.2"
loguru = "~0.5.3"
aiofiles = "~0.6.0"
pytz = "~2020.5"
pycryptodome = "~3.9.9"
"oslo.concurrency" = "~4.3.1"
redis = "~3.5.3"
fastapi = "~0.63.0"

[tool.poetry.dev-dependencies]
pytest = "~6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
