[tool.poetry]
name = "myapp"
version = "0.1.0"
description = "python web framework base on FastAPI."
authors = ["xiaobin.zhao"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "default"  # default为第一优先级

[tool.poetry.dependencies]
python = "~3.9"
alembic = "~1.11.3"
pydantic = "~1.7.3"
uvicorn = "~0.13.0"
dynaconf = "~3.1.2"
loguru = "0.7.2"
aiofiles = "~0.6.0"
pytz = "~2020.5"
pycryptodome = "^3.19.0"
"oslo.concurrency" = "~4.3.1"
fastapi = "~0.63.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
sqlalchemy = "~2.0.19"
attrdict = "~2.0.1"
pymysql = "~0.9.3"
asyncmy = "^0.2.8"
cython = "~0.29.23"
aioredis = "~1.3.1"
gunicorn = "~20.1.0"
uvloop = "~0.15.2"
httptools = "^0.6.0"
shortuuid = "^1.0.11"

[tool.poetry.dev-dependencies]
pytest = "~6.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
